# InventoryAPI

./: docker-compose.yml  pyproject.toml
fastapi_application/: .env.template  main.py
fastapi_application/alembic/versions/: 2025_08_21_0007-a8e76bfed05e_create_role.py  2025_08_21_0031-a24d38dbf502_create_users.py  2025_08_21_1431-5b7e33a89862_create_products.py  2025_08_21_1546-eda79884a2ec_create_status.py  2025_08_21_1603-3045852c851a_create_orders.py  2025_08_21_1656-29377118d4fc_create_orders_items.py  2025_08_21_1820-d81dc0f79668_create_users_roles.py  2025_08_28_2123-7546d8736a7a_unique_users_roles.py
fastapi_application/api/: __init__.py  authentication.py  orders.py  orders_items.py  products.py  users.py  utils.py  validation.py
fastapi_application/api/dependency/: order.py  orders_item.py  product.py  validation.py
fastapi_application/core/: config.py
fastapi_application/core/models/: __init__.py  base.py  db_helper.py  order.py  orderitem.py  product.py  role.py  status.py  user.py  users_roles.py
fastapi_application/core/schemas/: product.py  user.py
fastapi_application/crud/: order.py  order_item.py  product.py  users.py
fastapi_application/security/: jwt_create.py  jwt_utils.py  utils.py
